--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ pandas = "^2.2.2"
 streamlit = "^1.38.0"
 plotly-express = "^0.4.1"
 altair = "^5.4.1"
+nbformat = "^5.10.4"
+thefuzz = "^0.22.1"
 
 
 [tool.poetry.group.dev.dependencies]
